created the logged in about us page and made corrections to the headers of other pages

--- a/css/membership-signup.css
+++ b/css/membership-signup.css
@@ -1,3 +1,6 @@
+* {
+    font-family: 'Poppins', sans-serif !important;
+}
 /*---- membership form section ----*/
 .membership-bg {
     background: url("../img/membership-bg.png") no-repeat;
