--- a/css/shoptacle-user.css
+++ b/css/shoptacle-user.css
@@ -1,3 +1,6 @@
+* {
+    font-family: 'Poppins', sans-serif !important;
+}
 /*---- user section ----*/
 .user-bg {
     background: url("../img/user-bg.png") no-repeat;
